--- a/comments/templates/index.html
+++ b/comments/templates/index.html
@@ -17,8 +17,7 @@
     <!--将表单发送到指定页面-->
     <form action="/comments/index/" method="post">
         {% csrf_token %}
-        username:<input type="text" name="username"/> <br/>
-        <!--passowrd:<input type="password" name="password"/> <br/>-->
+        content:<input type="text" style="width:700px;height:200px;" name="body"/> <br/>
         <input type="submit" value="Submit"/>
     </form>
 
