--- a/comments/templates/index.html
+++ b/comments/templates/index.html
@@ -16,7 +16,7 @@
     {% if request.session.is_login %}
         <h1>hello,what's your mind?</h1>
         {% block mainbody %}
-        <!--这个的作用是: 将表单发送到指定页面-->
+        <!--这个的作用是: 将表单发送到指定页面,name是form.cleaned_data可以访问的-->
         <form action="/comments/index/" method="post">
             {% csrf_token %}
             content:<input type="text" style="width:700px;height:200px;" name="body"/> <br/>
