--- a/comments/templates/edit_post.html
+++ b/comments/templates/edit_post.html
@@ -16,7 +16,7 @@
 </div>
 
 <div> <!--　显示当前post -->
-        <li>---下边的是当前post的内容----
+        <li>-----下边的是当前post的内容-----
             <p>author:{{post.author.username}}</p>
             <p>content:{{post.body}}</p>
         </li>
